automatically backed up by learn

--- a/views/piglatinize.erb
+++ b/views/piglatinize.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-    <h2><%= @piggy_word %></h2>
+    <h2><%= PigLatinizer.to_pig_latin(@word) %></h2>
   </body>
 </html>
