--- a/views/piglatinize.erb
+++ b/views/piglatinize.erb
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
-    <h2><%= PigLatinizer.piglatinize(@word) %></h2>
+    <h2><%= @piglatin %></h2>
   </body>
 </html>
